--- a/_posts/2022-06-23-second.md
+++ b/_posts/2022-06-23-second.md
@@ -17,8 +17,12 @@ layout 종류 : single, post 등
 
 # 이미지 추가하기
 1. 아무 Repository 의 Issue 창을 연다.
+
 2. 복사한 이미지를 붙여 넣는다.
+
 3. Issue 창에 생긴 이미지 링크를 복사해 블로그에 붙여넣는다.
+
+   ![다운로드](../images/2022-06-23-second/다운로드.jpeg)
 
 ![image](https://user-images.githubusercontent.com/105684568/186350953-8e3300df-249d-45b1-aa7b-0c671532879d.png)
 
