--- a/_posts/2022-06-23-second.md
+++ b/_posts/2022-06-23-second.md
@@ -30,6 +30,8 @@ layout 종류 : single, post 등
 
 ![image](https://user-images.githubusercontent.com/105684568/186350953-8e3300df-249d-45b1-aa7b-0c671532879d.png)![12](../images/2022-06-23-second/12.jpeg)
 
+![다운로드](../images/2022-06-23-second/다운로드-1668663702967-2.jpeg)
+
 
 ```python
 import requests
